--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -13,3 +13,4 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 server.port:8080
+spring.boot.message = Hello, department service
