--- a/EMPLOYEE-SERVICE.properties
+++ b/EMPLOYEE-SERVICE.properties
@@ -13,3 +13,4 @@ server.port=8081
 
 #ServiceRegistry
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.boot.message = hello, employee service
